@@ -6,6 +6,8 @@ anyway complete.
 
 	* Save applets size position etc, and reload when panel starts up.
 
+	* pixmap backgrounds don't work.
+
 	* Size negotiation. Basically make sure this works. It should be no
 	  different than the usual GtkWidget size request/allocation. The
 	  applets shouldn't be allowed to be any bigger than the panel. The
