@@ -1,3 +1,10 @@
+2002-01-08  Mark McLoughlin  <mark@skynet.ie>
+
+	* TODO: add pixmap bacground todo.
+
+	* panel-applet.c: (panel_applet_associate_schemas_in_dir):
+	fix horked error checking.
+
 2002-01-04  Glynn Foster  <glynn.foster@sun.com>
 
 	* panel-applet-gconf.h: Remove include of ghash.h. Not needed.
